Use java.nio where possible #7783